# tprt-aoc-2025

./: CMakeLists.txt  README.md
cmake/: tprt_aoc_2025_version_detail.cmake
source/: CMakeLists.txt  arguments_t.hpp  counted_entrance_safe.hpp  day_t.hpp  dummy.hpp  entrance_password.hpp  entrance_safe.hpp  entrance_safe_rotation.hpp  get_entrance_password.hpp  get_entrance_password.ipp  main.cpp  zero_counted_entrance_safe.hpp  zero_visited_entrance_safe.hpp
source/detail/: entrance_safe_detail.hpp  to_contiguous_range_detail.hpp
source/entrance/: counted_entrance_safe.hpp  entrance_password.hpp  entrance_safe.hpp  entrance_safe_rotation.hpp  get_entrance_password.hpp  get_entrance_password.ipp  zero_counted_entrance_safe.hpp  zero_visited_entrance_safe.hpp
source/user_interface/: print_entrance_password.cpp  print_entrance_password.hpp  print_solution.cpp  print_solution.hpp
source/utils/: byte_like.hpp  contiguous_range_of.hpp  contiguous_range_of_either.hpp  contiguous_view_of.hpp  file_to_string.hpp  from_chars.hpp  from_chars.ipp  input_range_of_bytes.hpp  same_as_either.hpp  to_char.hpp  to_contiguous_range.hpp
